--- a/styles/home.css
+++ b/styles/home.css
@@ -10,9 +10,72 @@ body {
 
 .title {
     position: absolute;
-    top: 4vh;
-    left: 2vw;
+    top: 6vh;
+    left: 4vw;
     font-size: 4vh;
     font-weight: 500;
     color: white;
+}
+
+.navbar {
+    background-color: #FD7D00;
+    display: flex;
+    width: auto;
+    position: absolute;
+    top: 6vh;
+    right: 4vw;
+    padding-top: 1.5vh;
+    padding-bottom: 1.5vh;
+    border-radius: 13px;
+}
+
+.nav-element {
+    font-size: 3vh;
+    font-weight: 600;
+    vertical-align: middle;
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
+}
+
+a {
+    text-decoration: none;
+    color: #202020;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 89vw;
+    position: absolute;
+    top: 16vh;
+    left: 5.5vw;
+    right: 5.5vw;
+}
+
+.existing-products {
+    background-color: #4D4D4D;
+    width: 27vw;
+    border-radius: 11px;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    height: 60vh;
+}
+
+.prod-img {
+    width: 23vw;
+    margin-top: 4.5vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+
+.prod-name {
+    margin-top: 1.6vh;
+    font-size: 3vh;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-weight: 600;
 }
