--- a/styles/product.css
+++ b/styles/product.css
@@ -62,3 +62,87 @@ h2 {
     margin-right: 1vw;
     border-radius: 5px;
 }
+
+.size:hover {
+    background-color: #de6f00;
+}
+
+textarea {
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    background-color: #464646;
+    padding: 2vh 2vw;
+    font-size: 2.3vh;
+    border-radius: 5px;
+    resize: none;
+    color: #C0C0C0;
+}
+
+.long-textarea {
+    width: 40vw;
+}
+
+.short-textarea {
+    width: 26vw;
+}
+
+.input-container {
+    position: absolute;
+    top: 24vh;
+}
+
+.change {
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    width: 12.5vw;
+    margin-left: 1.5vw;
+    font-size: 2.3vh;
+    border-radius: 5px;
+    background-color: #FD7D00;
+    border: 0;
+    color: white;
+    font-weight: 600;
+    font-style: italic;
+}
+
+.change:hover {
+    background-color: #de6f00;
+}
+
+span {
+    display: inline-flex;
+}
+
+.product-image {
+    position: absolute;
+    top: 19vh;
+    left: 60vw;
+    width: 30vw;
+}
+
+.img {
+    width: 30vw;
+    position: absolute;
+    right: 0;
+}
+
+.delete {
+    border: 0;
+    font-weight: 600;
+    font-size: 2vh;
+    padding-top: 1.8vh;
+    padding-bottom: 1.8vh;
+    width: 14vw;
+    color: white;
+    background-color: #F04E4E;
+    border-radius: 9px;
+    font-style: italic;
+    position: absolute;
+    top: 65vh;
+    right: 15vw;
+    margin-right: -7vw;
+}
+
+.delete:hover {
+    background-color: #d34747;
+}
